OP-16307 - Popup alignments fixes in verification gate

--- a/gate-verify/custom-stage-deck/src/Verification.less
+++ b/gate-verify/custom-stage-deck/src/Verification.less
@@ -88,7 +88,7 @@
   cursor: pointer;
 }
 .modal-popup-verification{
-  width: 85%; 
+  width: 95%; 
   // height: 750px;
   margin: 30px auto;
 }
@@ -156,7 +156,7 @@
 @media screen and (max-width: 1300px) and (max-height: 800px) {
   #templateFrame{
     width: 100%;
-    height: 420px;
+    height: 340px;
   }
 }
 
